feat: finish documentation
